--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 
 @theme {
-  --color-antique-white: #faf1cd;
+  --color-primary-color: #fffbed;
   --color-eclipse: #2f3148;
 }
