--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-  --color-primary-color: #fffbed;
-  --color-eclipse: #2f3148;
+  --color-background-color: #404040;
+  --color-primary-color: #07f7eb;
 
   --animate-shimmer: shimmer 1.5s infinite;
   @keyframes shimmer {
